// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageContent renders default component 1`] = `
.c0 {
  max-width: 768px;
  margin: 0 auto;
  padding: 0 0 0 0;
  overflow: auto;
}

<div
  className="c0"
/>
`;

exports[`PageContent with custom content width 1`] = `
.c0 {
  max-width: 1024px;
  margin: 0 auto;
  padding: 0 0 0 0;
  overflow: auto;
}

<div
  className="c0"
/>
`;

exports[`PageContent with custom content width and padding 1`] = `
.c0 {
  max-width: 1024px;
  margin: 0 auto;
  padding: 60px 0 20px 0;
  overflow: auto;
}

<div
  className="c0"
/>
`;
